java 21 update API and data models, add staff API and ADR for dev database